# slope_staker

./: .gitignore  Cargo.toml  foreign.rs  index.html  readme.md  ui.rs
src/: .main.rs.swp  engine.rs  main.rs  ui.rs  utilities.rs
src/engine/: crosssection.rs  elevation.rs  mod.rs  station.rs
src/engine/breakpoint/: kind.rs  mod.rs  slope.rs
src/engine/crosssection/: mod.rs
src/engine/crosssection/breakpoint/: elev.rs  elevation.rs  kind.rs  mod.rs  offset.rs  slope.rs
src/engine/crosssection/breakpoint/elev/: mod.rs
src/engine/crosssection/breakpoint/kind/: mod.rs
src/engine/crosssection/breakpoint/offset/: constants.rs
src/engine/crosssection/slopestake/: mod.rs  ui.rs
src/engine/slopestake/: api.rs  mod.rs  ui.rs
src/engine/slopestake/breakpoint/: api.rs  mod.rs  ui.rs
src/engine/slopestake/station/: mod.rs  ui.rs
src/engine/slopestake/ui/: mod.rs  viewer.rs
src/foreign/: color32.rs  mod.rs  stroke.rs  traits.rs  vec2.rs
src/foreign/painter/: api.rs  mod.rs  style.rs
src/slopestake/: api.rs  mod.rs
src/slopestake/breakpoint/elev/: api.rs  mod.rs  ui.rs
src/slopestake/breakpoint/offset/: api.rs  mod.rs  ui.rs
src/slopestake/breakpoint/slope/: api.rs  mod.rs
src/slopestake/breakpoint/ui/: editor.rs  mod.rs  painter.rs
src/slopestake/station/: mod.rs  ui.rs
src/slopestake/ui/: editor.rs  viewer.rs
src/ui/: api.rs  mod.rs  utilities.rs
src/ui/utilities/: color.rs  mod.rs  plotter.rs  prefab_buttons.rs  stroker.rs
src/ui/utilities/plotter/: auto.rs  grid.rs  gridlines.rs  mod.rs  plot.rs  simple.rs
(+29 files in other folders)
