[package]
name = "slope_staker"
version = "0.1.0"
edition = "2024"

[dependencies]
regex = "1.11.3"
eframe = "0.31.0"
epaint = "0.31.0"
chrono = "0.4.40"
fixed = "1"
strum = "0.26"
strum_macros = "0.26"
egui-plotter = "0.6.0"
log = "0.4.28"

# web:
[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen-futures = "0.4.50"
web-sys = "0.3.70"              # to access the DOM (to hide the loading text)

